<resources>
    <string name="app_name">ASK EL BASHA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">إسأل الباشا</string>
    <string name="ask_el_basha">ASK EL BASHA</string>
    <string name="skip">Next</string>
    <string name="char_basha">Basha characters</string>
    <string name="choose_manual">Manual option</string>
    <string name="Price_category">Price Category</string>
    <string name="less_than_1000">less than 1000</string>
    <string name="range_1000_2000">from 1000 to 2000</string>
    <string name="range_2000_2500">from 2000 to 2500</string>
    <string name="range_2500_3000">from 2500 to 3000</string>
    <string name="range_3000_3500">from 3000 to 3500</string>
    <string name="range_3500_4000">from 3500 to 4000</string>
    <string name="range_4000_5000">from 4000 to 5000</string>
    <string name="range_5000_6000">from 5000 to 6000</string>
    <string name="range_6000_7000">from 6000 to 7000</string>
    <string name="more_than_7000">more than 7000</string>
    <string name="choose">Show</string>

    <string name="monster_of_processor">Monster Of Processor</string>
    <string name="Artists">Artists</string>
    <string name="superhero">Super Hero</string>
    <string name="Kings_of_selfie">Kings Of Selfie</string>
    <string name="without_stopping">Without Stopping</string>

    <string name="Powerful_processor">● Powerful processor and powerful graphics processor</string>
    <string name="Stable_software_performance">● Stable software performance</string>
    <string name="Materials_manufacturing">● Materials used in manufacturing</string>
    <string name="user_interface">● user interface</string>
    <string name="Size_of_Ram">● Size of Ram</string>

    <string name="Unique_design">● Unique design and distinctive colors</string>
    <string name="camera_power_images">● The rear camera\'s resolution and power to enliven images</string>
    <string name="screen_clear_bright">● The colors of the screen are clear and bright</string>
    <string name="camera_lens_slot">● Large camera sensor size and wide lens slot</string>

    <string name="performance_mobile">● medium performance in all mobile tasks</string>
    <string name="closest_ideal_mobile">● Mobile is the closest to the ideal mobile</string>
    <string name="Ready_quickly_efficiently">● Ready to meet your daily needs quickly and efficiently</string>
    <string name="processor_Camera_material">● Power processor - Camera purity - Power material manufacturing</string>

    <string name="powerful_front_camera">● Performance of a powerful front camera</string>
    <string name="Accurate_pixel_camera">● Accurate mega pixel camera and wide lens slot</string>
    <string name="strength_interface_stability">● The strength of the interface and its stability</string>
    <string name="Features_interface_photography">● Features of the interface in photography</string>

    <string name="Large_battery_size">● Large battery size</string>
    <string name="Power_Saver_Wizard">● Power Saver Wizard</string>
    <string name="interface_energy_saving">● Improved user interface in energy saving</string>

    <string name="lang">En</string>

    <string name="fav_list">Favorite List</string>

    <string name="colors">Colors</string>
    <string name="shop_now">Shop now</string>
    <string name="key_specs">KEY SPECS</string>
    <string name="display">SCREEN</string>
    <string name="platform">PLATFORM</string>
    <string name="camera">CAMERA</string>
    <string name="other_feature">OTHER FEATURES</string>
    <string name="battery">BATTERY</string>
    <string name="review">REVIEW</string>



    <string-array name="Ram">
        <item>RAM</item>
        <item>1 GB</item>
        <item>2 GB</item>
        <item>3 GB</item>
        <item>4 GB</item>
        <item>6 GB</item>
        <item>8 GB</item>
        <item>10 GB</item>
        <item>12 GB</item>
    </string-array>

    <string-array name="Ram2">
        <item>RAM</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
    </string-array>


    <string-array name="Processor">
        <item>CPU</item>
        <item>Snapdragon600</item>
        <item>Snapdragon855</item>
        <item>kirin</item>
        <item>snapdragon</item>
        <item>qualcom</item>
    </string-array>

    <string-array name="Storage1">
        <item>ROM/Storage</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
        <item>64</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1</item>
    </string-array>

    <string-array name="Storage">
        <item>ROM/Storage</item>
        <item>8 GB</item>
        <item>16 GB</item>
        <item>32 GB</item>
        <item>64 GB</item>
        <item>128 GB</item>
        <item>256 GB</item>
        <item>512 GB</item>
        <item>1 TB</item>
    </string-array>


    <string-array name="Battery1">
        <item>Battery</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>

    <string-array name="Battery">
        <item>Battery</item>
        <item>2000 mAh</item>
        <item>2500 mAh</item>
        <item>3000 mAh</item>
        <item>3500 mAh</item>
        <item>4000 mAh</item>
        <item>4500 mAh</item>
        <item>5000 mAh</item>
        <item>10000 mAh</item>
    </string-array>

    <string-array name="screen">
        <item>Screen</item>
        <item>HD</item>
        <item>FHD</item>
        <item>FHD+</item>
        <item>QHD</item>
        <item>2k</item>
        <item>4k</item>
    </string-array>

    <string-array name="software">
        <item>Software/OS</item>
        <item>android 4.4 ( kitkat)</item>
        <item>android 5.0 ( lolipop )</item>
        <item>android 5.1 ( lolipop )</item>
        <item>android 6.0 ( marshmallow )</item>
        <item>android 7.0 ( nougat )</item>
        <item>android 7.1 ( nougat )</item>
        <item>android 8.0 ( oreo )</item>
        <item>android 8.1 ( oreo )</item>
        <item>android 9.0 ( pie )</item>
        <item>ios 10</item>
        <item>ios 11</item>
        <item>ios 12</item>
        <item>ios 13</item>
    </string-array>


    <string name="Internet_not_access_Please_connect_to_the_internet">Internet not access Please connect to the internet</string>
    <string name="You_are_offline_Please_connect_to_the_internet">You are offline. Please connect to the internet</string>
    <string name="Failure_Please_try_again">Failure,Please try again</string>
    <string name="there_are_no_products_right_now">There are no products right now</string>
    <string name="like">You are liked this producted</string>
    <string name="likealready">You already like this product</string>
    <string name="favalready">This product already in favorite list</string>
    <string name="favadded">Added to favorite list</string>
    <string name="no_favorites">Empty Favorite list</string>
    <string name="oops_there_is_problem_in_internet_connection">OoPs There is problem in internet connection</string>
    <string name="no_products">No Products</string>

    <string name="frontCamera">front Camera</string>
    <string name="rearCamera">rear Camera</string>
    <string name="No_cards">There is no cards</string>

</resources>
