<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FananeenCharFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Artists"
            android:textSize="35dp"
            android:textColor="@android:color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:shadowColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/kufam_bold"
            />

        <ImageView
            android:id="@+id/char_fananeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fananeen"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/Unique_design"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/camera_power_images"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/screen_clear_bright"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/camera_lens_slot"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>