<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuperCharFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/superhero"
            android:textSize="35dp"
            android:textColor="@android:color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:shadowColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/kufam_bold"
            />

        <ImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/char_superhero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/superhero"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/performance_mobile"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/closest_ideal_mobile"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/Ready_quickly_efficiently"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:text="@string/processor_Camera_material"
                android:shadowColor="@android:color/black"
                android:fontFamily="@font/bahij_the_sans_arabic_bold"/>
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>