<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cbc0cc"
    android:layoutDirection="ltr"
    android:id="@+id/parentcards"
    tools:context="com.ElBasha.mob.app.swipcards">


    <ImageView
        android:visibility="gone"
        android:id="@+id/mobileimageempty"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_smartphone_empty"
        android:layout_centerInParent="true"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/textopps"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mobileimageempty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#9bda0303"
        android:layout_marginTop="15dp"
        android:text="@string/oops_there_is_problem_in_internet_connection"/>


    <TextView
        android:visibility="gone"
        android:id="@+id/textnoresultinrecycle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mobileimageempty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#9bda0303"
        android:layout_marginTop="15dp"
        android:text="@string/no_products"/>

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/esaal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/title"
            android:textStyle="bold"
            android:fontFamily="@font/khebrat_musamim_bold_new"
            />


        <TextView
            android:background="@android:color/white"
            android:layout_below="@id/esaal"
            android:id="@+id/esaal_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:text="@string/ask_el_basha"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:fontFamily="@font/samsungsharpsans"
            />

        <ImageView
            android:id="@+id/openfavList"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_list"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/centerlayout"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.daprlabs.cardstack.SwipeFrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.daprlabs.cardstack.SwipeDeck
                android:id="@+id/swipe_deck"
                android:layout_width="match_parent"
                android:layout_height="@dimen/HeightCard"
                android:padding="20dp"
                swipedeck:card_spacing="10dp"
                swipedeck:max_visible="3"
                swipedeck:render_above="true"
                swipedeck:rotation_degrees="15" />

        </com.daprlabs.cardstack.SwipeFrameLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/TopMerginIconUnderCard"
        android:layout_below="@+id/centerlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/reloadbtn"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="@dimen/HeightAndWidthIconUnderCard"
            android:layout_height="@dimen/HeightAndWidthIconUnderCard"
            android:src="@drawable/ic_round_right_arrow"
            android:padding="@dimen/paddingIconUnderCard1"
            android:background="@drawable/circle" />

        <ImageView
            android:id="@+id/close"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="@dimen/HeightAndWidthIconUnderCard"
            android:layout_height="@dimen/HeightAndWidthIconUnderCard"
            android:src="@drawable/ic_clear"
            android:padding="@dimen/paddingIconUnderCard2"
            android:background="@drawable/circle"
             />


        <ImageView
            android:id="@+id/setfavorate"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="@dimen/HeightAndWidthIconUnderCard"
            android:layout_height="@dimen/HeightAndWidthIconUnderCard"
            android:src="@drawable/ic_star"
            android:padding="@dimen/paddingIconUnderCard3"
            android:background="@drawable/circle"
            />

        <ImageView
            android:id="@+id/setlike"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="@dimen/HeightAndWidthIconUnderCard"
            android:layout_height="@dimen/HeightAndWidthIconUnderCard"
            android:src="@drawable/ic_like"
            android:padding="@dimen/paddingIconUnderCard3"
            android:background="@drawable/circle"
            />


    </LinearLayout>




</RelativeLayout>
